[gd_scene load_steps=11 format=2]

[ext_resource path="res://themes/large_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://components/CountdownTimer.gd" type="Script" id=3]
[ext_resource path="res://assets/img/btn-play.png" type="Texture" id=6]
[ext_resource path="res://assets/img/btn-stop.png" type="Texture" id=7]
[ext_resource path="res://assets/img/btn-stop-pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/img/btn-pause-pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/img/btn-pause.png" type="Texture" id=10]
[ext_resource path="res://assets/img/btn-play-pressed.png" type="Texture" id=11]
[ext_resource path="res://themes/stylebox_timer.tres" type="StyleBox" id=12]

[node name="CountdownTimer" type="MarginContainer"]
margin_right = 841.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 831.0
margin_bottom = 190.0
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 821.0
margin_bottom = 90.0
size_flags_horizontal = 3
alignment = 1

[node name="MinutesLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 293.0
margin_right = 401.0
margin_bottom = 50.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
text = "00"
align = 1
max_length = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 405.0
margin_right = 415.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = ":"

[node name="SecondsLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 419.0
margin_right = 527.0
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/focus = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
text = "00"
align = 1
max_length = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 821.0
margin_bottom = 140.0
size_flags_horizontal = 3
custom_constants/separation = 30
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 320.0
margin_right = 360.0
margin_bottom = 40.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )

[node name="PauseButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 390.0
margin_right = 430.0
margin_bottom = 40.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="StopButton" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 460.0
margin_right = 500.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/MinutesLineEdit" to="." method="_on_MinutesLineEdit_focus_exited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/MinutesLineEdit" to="." method="_on_MinutesLineEdit_text_changed"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/SecondsLineEdit" to="." method="_on_SecondsLineEdit_focus_exited"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/SecondsLineEdit" to="." method="_on_SecondsLineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/StopButton" to="." method="_on_StopButton_pressed"]
